# ChatBot

./: .gitingore  pyproject.toml  setup.py
api/: __init__.py  llm_api.py
callback_handler/: conversation_callback_handler.py
chat/: chat.py  chat_utils.py
configs/: basic.py  fastchat.py  model.py  prompt.py  store.py
core/: api.py  controller.py  model_worker.py  openai_api.py  webui.py
db/: base.py  session.py  utils.py
db/models/: Base.py  conversation_model.py  knowledge_file_model.py  knowledge_metadata_model.py  message_model.py
db/repository/: conversation_repository.py  message_repository.py
docs/: alembic.md
pages/: api_utils.py  components.py  dialog.py
server/api_server/: server_app.py
tests/: test_chat.py
utils/: http.py  process.py
