[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.117.1",
    "fastchat>=0.1.0",
    "fschat[model-worker,webui]>=0.2.36",
    "httpx>=0.28.1",
    "modelscope>=1.30.0",
    "numpy>=2.3.3",
    "psutil>=7.1.0",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "streamlit-option-menu>=0.4.0",
    "transformers>=4.56.2",
    "uvicorn>=0.37.0",
]
