[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.2.0",
    "alembic>=1.16.5",
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "modelscope>=1.30.0",
    "numpy>=2.3.3",
    "openai>=1.109.1",
    "psutil>=7.1.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "sse-starlette>=3.0.2",
    "streamlit>=1.50.0",
    "streamlit-option-menu>=0.4.0",
    "transformers>=4.56.2",
    "uvicorn>=0.37.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "accelerate>=1.0.1",
    "bitsandbytes>=0.44.1 ; platform_system != 'Windows'",
    "llama-cpp-python>=0.3.1 ; platform_system != 'Windows'",
    "fschat[model-worker,webui]>=0.2.36",
]
